[package]
name = "nest"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
ratatui = "0.29.0"
crossterm = "0.27.0"
color-eyre = "0.6.2"
fs-err = "3.0.0"
unix-named-pipe = "0.2.0"
tui-textarea = "0.7.0"
indexmap = { version = "2.7.1", features = ["serde"] }

[features]
climsg = [] # integrate `nest` with `climsg`
